# img_manipulation

./: .gitignore  Cargo.toml
src/: convert.rs  file_operation.rs  img_watermark.rs  imgproc.rs  main.rs  scale_image.rs  thumbnailing.rs  watermark.rs
src/img_watermark/: caching.rs
