[package]
name = "img_manipulation"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.7", features = ["webp-encoder"] }
rayon = "1.8.1"

[profile.release]
strip = true
opt-level = "s"
lto  = true
codegen-units = 1
